--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div class="sidebar-satu">
       <h3>Sidebar Satu</h3>
       <ul>
-        <li><a href="https://andreanlimanto.github.io">Website</a></li>
-        <li><a href="https://github.com/AndreanLimanto">Github</a></li>
-        <li><a href="https://twitter.com/liemdre">Twitter</a></li>
-        <li><a href="https://facebook.com/liemdre">Facebook</a></li>
-        <li><a href="https://www.freecodecamp.org/certification/liemdre/responsive-web-design">Certification</a></li>
+        <li><a href="https://andreanlimanto.github.io" target="_blank">Website</a></li>
+        <li><a href="https://github.com/AndreanLimanto" target="_blank">Github</a></li>
+        <li><a href="https://twitter.com/liemdre" target="_blank">Twitter</a></li>
+        <li><a href="https://facebook.com/liemdre" target="_blank">Facebook</a></li>
+        <li><a href="https://www.freecodecamp.org/certification/liemdre/responsive-web-design" target="_blank">Certification</a></li>
       </ul>
     </div>
     <div class="sidebar-dua">
